# HyperAST

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  README.md  gt_script.sh
algorithms/: Cargo.toml
algorithms/examples/: walk_java_from_github.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs  reserializing.rs  write_serializer.rs
benchmark_diffs/: Cargo.toml
benchmark_diffs/src/: A1.java  A2.java  buggy_fixed.rs  cross_repo.rs  diff_output.rs  lib.rs  postprocess.rs  preprocess.rs  random_sample_diff.rs  swap_diff.rs  window_combination.rs
benchmark_diffs/src/algorithms/: gumtree.rs  gumtree_lazy.rs  gumtree_partial_lazy.rs  mod.rs
benchmark_diffs/src/other_tools/: gumtree.rs  mod.rs
client/: Cargo.toml
client/src/: main.rs
cvs/git/: Cargo.toml
cvs/git/examples/: Cargo.toml  testHast.rs
cvs/git/src/: allrefs.rs  git.rs  java.rs  java_processor.rs  lib.rs  maven.rs  maven_processor.rs  multi_preprocessed.rs  preprocessed.rs
hyper_ast/: Cargo.toml
hyper_ast/src/: full.rs  hashed.rs  lib.rs  nodes.rs  position.rs  types.rs  utils.rs
hyper_ast/src/cyclomatic/: mod.rs
hyper_ast/src/filter/: default.rs  (+2 more)
hyper_diff/: Cargo.toml
hyper_diff/benches/: compressed_path_iter.rs  qgrams.rs
hyper_diff/src/: lib.rs
metrics/: Cargo.toml
metrics/examples/: test.rs  test_for_mcc.rs  test_metrics_from_git.rs  walk_java_from_github.rs
metrics/src/: count.rs  lib.rs  mcc.rs  plagiarism.rs  utils.rs  walk.rs
ref-mining-evaluation/: Cargo.toml
ref-mining-evaluation/src/: compare.rs  comparisons.rs  main.rs  relations.rs  stats.rs
tree-sitter_types/: Cargo.toml  out.rs
tree-sitter_types/src/: lib.rs  parse_types.rs
yoann/: Cargo.toml
yoann/src/: main.rs
(+90 files in other folders)
