[package]
name = "hyper_ast_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
tree-sitter = "0.20.1"
tree-sitter-cli = "0.20.1"
hyper_ast = { path = "../hyper_ast" }
hyper_ast_cvs_git = { path = "../cvs/git" }
hyper_diff = { path = "../hyper_diff" }
hyper_ast_benchmark_diffs = { path = "../benchmark_diffs" }
hyper_ast_gen_ts_java = { path = "../gen/tree-sitter/java" }

env_logger = "0.9.0"
log = { version = "0.4.6", features = ["max_level_debug", "release_max_level_warn"] }