[package]
name = "testHast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.16.1", features = ["vendored-libgit2"]}
tree-sitter = "0.20.0"
hyper_ast_gen_ts_java = { path = "../../gen/tree-sitter/java" }
hyper_ast_gen_ts_xml = { path = "../../gen/tree-sitter/xml" }
hyper_ast = { path = "../../hyper_ast" }
log = { version = "0.4.6", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
tuples = "=1.4.1"


pommes = "0.0.2"


serde = { version = "1.0.130" }
serde-xml-rs = "0.5.1"

[dev-dependencies]
env_logger = "0.9.0"
hyper_ast = { path = "../../../hyper_ast" }
hyper_diff = { path = "../../../hyper_diff" }
hyper_ast_gen_ts_java = { path = "../../../gen/tree-sitter/java" }
benchmark_diffs = { path = "../../../benchmark_diffs"}
log = { version = "0.4.6", features = ["max_level_debug", "release_max_level_warn"] }
